cmake_minimum_required(VERSION 3.23)
project(acceleratedCplus)

set(CMAKE_CXX_STANDARD 14)

add_executable(acceleratedCplus main.cpp main.cpp)

add_executable(study1_frameGreeting2 study1/frameGreeting2.cpp)
add_executable(study1_greeting study1/greeting.cpp)
add_executable(study1_greeting2 study1/greeting2.cpp)
add_executable(study1_greeting3 study1/greeting3.cpp)
add_executable(study1_ex2_4_greeting study1/ex2_4_greeting.cpp)
add_executable(study1_ex2_1 study1/ex2_1.cpp)
add_executable(study1_ex2_2 study1/ex2_2.cpp)
add_executable(study1_score study1/score.cpp)
add_executable(study1_score2 study1/score2.cpp)
add_executable(study1_ex3_3 study1/ex3_3.cpp)
add_executable(study1_ex3_4 study1/ex3_4.cpp)
add_executable(study1_homework study1/homework.cpp)
add_executable(study2_score3 study2/score3.cpp)
add_executable(study2_score4 study2/ex4_6/score4.cpp study2/ex4_6/median.cpp study2/ex4_6/student_info.cpp)
add_executable(study2_ex4_7 study2/ex4_7.cpp)
add_executable(study2_ex4_6_score4 study2/ex4_6/score4.cpp study2/ex4_6/student_info.cpp study2/ex4_6/median.cpp)
add_executable(study2_ex4_5 study2/ex4_5.cpp)
add_executable(study3_score5_score5 study3/score5/score5.cpp study3/score5/student_info.cpp study3/score5/median.cpp)
add_executable(study3_score6_score6 study3/score6/score6.cpp study3/score6/student_info.cpp study3/score6/median.cpp)
add_executable(study3_slit_main study3/split/main.cpp)
add_executable(study4_vcatCopy study4/vcatCopy.cpp)