cmake_minimum_required(VERSION 3.23)
project(acceleratedCplus)

set(CMAKE_CXX_STANDARD 14)

add_executable(acceleratedCplus main.cpp main.cpp)

add_executable(study1_frameGreeting2 study1/frameGreeting2.cpp)
add_executable(study1_greeting study1/greeting.cpp)
add_executable(study1_greeting2 study1/greeting2.cpp)
add_executable(study1_greeting3 study1/greeting3.cpp)
add_executable(study1_ex2_4_greeting study1/ex2_4_greeting.cpp)
add_executable(study1_ex2_1 study1/ex2_1.cpp)
add_executable(study1_ex2_2 study1/ex2_2.cpp)
add_executable(study1_score study1/score.cpp)
add_executable(study1_score2 study1/score2.cpp)
add_executable(study1_ex3_3 study1/ex3_3.cpp)
add_executable(study1_ex3_4 study1/ex3_4.cpp)
add_executable(study1_homework study1/homework.cpp)
add_executable(study2_score3 study2/score3.cpp)
add_executable(study2_score4 study2/ex4_6/score4.cpp study2/ex4_6/median.cpp study2/ex4_6/student_info.cpp)
add_executable(study2_ex4_7 study2/ex4_7.cpp)
add_executable(study2_ex4_6_score4 study2/ex4_6/score4.cpp study2/ex4_6/student_info.cpp study2/ex4_6/median.cpp)
add_executable(study2_ex4_5 study2/ex4_5.cpp)
add_executable(study3_score5_score5 study3/score5/score5.cpp study3/score5/student_info.cpp study3/score5/median.cpp)
add_executable(study3_score6_score6 study3/score6/score6.cpp study3/score6/student_info.cpp study3/score6/median.cpp)
add_executable(study3_slit_main study3/split/main.cpp)
add_executable(study4_vcatCopy study4/vcatCopy.cpp)
add_executable(study4_algorithm study4/algorithm.cpp)
add_executable(study4_split2 study4/split2.cpp)
add_executable(study4_wordCount study4/wordCount.cpp)
add_executable(study4_wordLine study4/wordLine.cpp)
add_executable(study5_ex6_9 study5/ex6_9.cpp)
add_executable(study5_ex7_2_ex7_2 study5/ex7_2/ex7_2.cpp study5/ex7_2/median.cpp study5/ex7_2/student_info.cpp)
add_executable(study5_scoreClassType_scoreClass study5/scoreClassType/scoreClass.cpp study5/scoreClassType/median.cpp study5/scoreClassType/student_info.cpp)
add_executable(study5_ex9_5_ex9_5 study5/ex9_5/ex9_5.cpp study5/ex9_5/student_info.cpp study5/ex9_5/median.cpp)
add_executable(study6_ex9_5 study6/ex9_5/ex9_5.cpp study6/ex9_5/student_info_p.cpp study6/ex9_5/Grader.cpp study6/ex9_5/Grader.h)
add_executable(study6_median_median study6/median/median.cpp)
add_executable(study6_iterator study6/iterator.cpp)
add_executable(study6_algorithm study6/algorithm.cpp)
add_executable(study6_Vec_main study6/Vec/main.cpp)